konflux-ci/ui/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konflux-ui
  annotations:
    cert-manager.io/cluster-issuer: self-signed-cluster-issuer
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  tls:
    - hosts:
        - "ui.konflux.dev"
      secretName: proxy-tls-cert
  rules:
  - host: "ui.konflux.dev"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: proxy
            port:
              number: 8080
